--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ android {
 }
 
 dependencies {
+
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
 
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
