--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nepplus.librarypractice_20220221">
-          <!--인터넷은 기본적인 권한 => 태그만 추가하면 사용 가능-->
-    <uses-permission android:name="android.permission.INTERNET"/>
-          <!--    위험한 권한도 마찬가지로 태그는 추가해야 함-->
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <!-- 인터넷은 기본적인 권한 => 태그만 추가하면 사용 가능 -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 위험한 권한도 마찬가지로 태그는 추가해야 함 -->
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,9 +13,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LibraryPractice_20220221">
         <activity
-            android:name=".ViewPhotoActivity"
+            android:name=".SpashActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
-            android:exported="true" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+
+        <activity
+            android:name=".ViewPhotoActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
